Refine blog post layout: wider content, fix code block scrollbars, tidy formatting

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,17 +1,29 @@
 
-.highlight {
+.highlighter-rouge {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
-  overflow: scroll;
+  overflow-x: auto;
+}
+
+.highlight {
+  background-color: transparent;
+  border: 0;
+  box-shadow: none;
+  margin: 0;
+  padding: 0;
+  overflow: visible;
+}
+
+.highlight pre, pre.highlight {
+  margin: 0;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-size: 14px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
